--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           path: build
   deploy:
     name: Deploy 🚀
-    needs: build
+    needs: dist
     runs-on: ubuntu-latest
     steps: 
       - name: Checkout repository
@@ -52,8 +52,8 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@main
         with: 
-          name: build
-          path: build
+          name: dist
+          path: dist
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
         with: 
@@ -63,5 +63,5 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: 21
-          local-dir: ./build/
+          local-dir: ./dist/
           server-dir : /
